# jeancmaia.github.io

./: README.md  _quarto.yml  about.qmd  pyproject.toml
_freeze/posts/tutorial-mcglm/tutorial_mcglm/execute-results/: html.json
_site/: index.html
_site/posts/welcome/: index.html
docs/: about.html  index.html  listings.json  search.json
docs/posts/post-with-code/: index.html
docs/posts/tutorial-mcglm/: tutorial_mcglm.html
posts/tutorial-mcglm/: tutorial_mcglm.qmd
