[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Jean Carlos"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
jupyter = "^1.0.0"
statsmodels = "^0.13.5"
scikit-learn = "^1.2.1"
patsy = "^0.5.3"
matplotlib = "^3.6.3"
mcglm = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
